<resources>
    <string name="app_name">Smart Parking Client</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="user_profile">User Profile</string>
    <string name="username">Username:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone">Phone:</string>
    <string name="total_places">Total places:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="add_booking">Add booking</string>
    <string name="select_parking">Select Parking:</string>
    <string name="select_parking_place">Select Parking Place</string>
    <string name="select_date">Select Date</string>
    <string name="select_start_time">Select start time:</string>
    <string name="select_end_time">Select end time:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="log_in">Log in</string>
</resources>