<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/parking_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/parking_name"/>


    <RelativeLayout
        android:id="@+id/booking_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/place_name">

        <TextView
            android:id="@+id/date_text"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/date_text"
            android:layout_marginStart="4dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/booking_time_span"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/booking_date">

        <TextView
            android:id="@+id/time_span_text"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/time_span_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/time_span_text"
            android:layout_marginStart="4dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_booking" />

    <LinearLayout
        android:id="@+id/actions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/booking_time_span"
        android:layout_marginTop="8dp"
        android:visibility="gone">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/danger"
            android:text="@string/delete"/>

    </LinearLayout>

</RelativeLayout>